@@ -12,7 +12,7 @@
     "http://freshmeat.net/subscribe/?url=%2Fprojects%2Flibzvbi%2F">libzvbi</a>.</p>
 
     <dl>
-      <dt>2005-05-10 <strong>Libzvbi 0.2.21 released</strong></dt>
+      <dt>2006-05-10 <strong>Libzvbi 0.2.21 released</strong></dt>
 
       <dd>Oops. WSS capturing from video images didn't work anymore. <a href=
       "http://sourceforge.net/project/shownotes.php?group_id=2599&release_id=416017"
@@ -22,7 +22,7 @@
         <p></p>
       </dd>
 
-      <dt>2005-05-08 <strong>Libzvbi 0.2.20 released</strong></dt>
+      <dt>2006-05-08 <strong>Libzvbi 0.2.20 released</strong></dt>
 
       <dd>Minor improvements. <a href=
       "http://sourceforge.net/project/shownotes.php?release_id=415553"
@@ -32,13 +32,13 @@
         <p></p>
       </dd>
 
-      <dt>2005-02-23 <strong>Libzvbi 0.2.19 released</strong></dt>
+      <dt>2006-02-23 <strong>Libzvbi 0.2.19 released</strong></dt>
 
       <dd>
         <p></p>
       </dd>
 
-      <dt>2005-02-11 <strong>Libzvbi 0.2.18 released</strong></dt>
+      <dt>2006-02-11 <strong>Libzvbi 0.2.18 released</strong></dt>
 
       <dd>
         <p></p>
