@@ -1,3 +1,7 @@
+2006-09-21    <mschimek@users.sf.net>
+
+	* htdocs/News.html: Fixed wrong dates spotted by David Liontooth.
+
 2005-11-15    <mschimek@users.sf.net>
 
 	* htdocs/favicon.ico: Background was not transparent.
